sapiens_tools/tests/snapshots/e2e__tests__multiple_tool_invocations.snap
---
source: sapiens_tools/tests/e2e.rs
expression: output
---
stdout: |
  Hello world 1!
stderr: ''

