sapiens_tools/tests/snapshots/e2e__tests__python.snap
---
source: sapiens_tools/tests/e2e.rs
expression: output
---
stdout: |
  And the result is: hello and something else
stderr: ''

