sapiens_tools/tests/snapshots/e2e__tests__tool_invocation_in_python.snap
---
source: sapiens_tools/tests/e2e.rs
expression: output
---
stdout: |
  Hello world!
  {'something': 'blah and something else'}
  {'something': 'blah and something else'}
stderr: ''

